cmake_minimum_required(VERSION 2.8)
project( simulation )
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
find_package(PkgConfig REQUIRED)
find_package( OpenGL REQUIRED)
find_package(GLEW REQUIRED)
pkg_search_module(GLFW REQUIRED glfw3)
#link_directories(/usr/local/Cellar/glfw/3.2.1/lib)
find_package(GLUT REQUIRED)
include_directories(${OPENGL_INCLUDE_DIRS} ${GLUT_INCLUDE_DIR} ${GLEW_INCLUDE_DIRS} ${GLFW_INCLUDE_DIRS})
include_directories(header)
add_executable( simulation main.cpp)
target_link_libraries( simulation ${OPENGL_LIBRARY} ${GLUT_LIBRARY} ${GLFW_LIBRARIES})
#target_compile_features(simulation PRIVATE cxx_range_for)
